@@ -173,6 +173,22 @@ function load_optpage_data_display() {
         'refresh' => SMOPT_REFRESH_NONE
     );
 
+    $optvals[SMOPT_GRP_MAILBOX][] = array(
+        'name'    => 'truncate_sender',
+        'caption' => _("Length of From/To Field (0 for full)"),
+        'type'    => SMOPT_TYPE_INTEGER,
+        'refresh' => SMOPT_REFRESH_NONE,
+        'size'    => SMOPT_SIZE_TINY
+    );
+
+    $optvals[SMOPT_GRP_MAILBOX][] = array(
+        'name'    => 'truncate_subject',
+        'caption' => _("Length of Subject Field (0 for full)"),
+        'type'    => SMOPT_TYPE_INTEGER,
+        'refresh' => SMOPT_REFRESH_NONE,
+        'size'    => SMOPT_SIZE_TINY
+    );
+
     /*** Load the General Options into the array ***/
     $optgrps[SMOPT_GRP_MESSAGE] = _("Message Display and Composition");
     $optvals[SMOPT_GRP_MESSAGE] = array();
@@ -330,10 +346,11 @@ function load_optpage_data_display() {
     );
 
     $optvals[SMOPT_GRP_MESSAGE][] = array(
-        'name'    => 'internal_date_sort',
-        'caption' => _("Sort by Received Date"),
-        'type'    => SMOPT_TYPE_BOOLEAN,
-        'refresh' => SMOPT_REFRESH_ALL
+        'name'          => 'internal_date_sort',
+        'caption'       => _("Sort by Received Date"),
+        'type'          => SMOPT_TYPE_BOOLEAN,
+        'refresh'       => SMOPT_REFRESH_ALL,
+        'initial_value' => SMPREF_ON
     );
     if ($allow_thread_sort == TRUE) {
         $optvals[SMOPT_GRP_MESSAGE][] = array(
